improve readability toast messages + fix light/dark theme

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -116,7 +116,7 @@
   border-collapse: collapse;
   overflow: hidden;
   border: 3px solid var(--p-button-primary-hover-border-color);
-  color: white;
+  color: var(--color-text);
 }
 .leaderboard th {
   background: var(--p-button-primary-hover-background);
@@ -164,7 +164,7 @@
   height: 100%;
   padding: 0.5rem 1rem;
   text-decoration: none;
-  color: white;
+  color: var(--color-text);
 }
 
 
@@ -192,4 +192,23 @@
 }
 .on-off-custom.p-togglebutton {
   background: rgb(0, 96, 44) !important;
+}
+
+
+/* TOAST BG FOR LIGHT THEME */
+.p-toast-message {
+  --p-toast-info-background: rgba(236, 245, 255, 0.75);
+  --p-toast-success-background: rgba(226, 255, 230, 0.75);
+  --p-toast-error-background: rgb(255, 233, 233);
+  --p-toast-warn-background: rgba(255, 255, 228, 0.75);
+}
+
+/* TOAST BG FOR DARK THEME */
+@media (prefers-color-scheme: dark) {
+  .p-toast-message {
+    --p-toast-info-background: rgba(14, 26, 47, 0.75);
+    --p-toast-success-background: rgba(14, 47, 19, 0.75);
+    --p-toast-error-background: rgba(47, 14, 14, 0.75);
+    --p-toast-warn-background: rgba(47, 43, 14, 0.75);
+  }
 }
